--- a/player_create.html
+++ b/player_create.html
@@ -31,6 +31,13 @@
 
       <input type="submit" value="Submit" />
     </form>
+    <select name="" id="">
+      <option value="">1</option>
+      <option value="">2</option>
+      <option value="">3</option>
+      <option value="">4</option>
+      <option value="">5</option>
+    </select>
 
     <a href="./index.php">index</a>
   </body>
